# AutoUAV

./: LICENSE  README.md
catkin_ws_d430_ros/: set_origin.py
catkin_ws_d430_ros/src/apm_d430_bridge/: CMakeLists.txt  package.xml
catkin_ws_d430_ros/src/apm_d430_bridge/include/: apm_d430_bridge.h
catkin_ws_d430_ros/src/apm_d430_bridge/launch/: apm_bridge_mavros.launch  bridge.launch  bridge_mavros.launch
catkin_ws_d430_ros/src/apm_d430_bridge/src/nodes/: apm_d430_bridge.cpp  apm_d430_bridge_node.cpp
catkin_ws_d430_ros/src/d430_slam/: CMakeLists.txt  package.xml
catkin_ws_d430_ros/src/d430_slam/config/: settings.yaml
catkin_ws_d430_ros/src/d430_slam/include/: d430_camera.h  d430_slam.h
catkin_ws_d430_ros/src/d430_slam/launch/: apm_d430_slam.launch  d430_slam.launch  d430_slam_px4.launch
catkin_ws_d430_ros/src/d430_slam/src/node/: d430_camera.cpp  d430_slam_node.cpp  orbslam.cpp
catkin_ws_d430_ros/src/offboard/: CMakeLists.txt  package.xml
catkin_ws_d430_ros/src/offboard/include/: offboard_postest.h  offboard_rover.h  offboard_veltest.h
catkin_ws_d430_ros/src/offboard/src/node/: offboard_postest.cpp  offboard_rover.cpp  offboard_test_node.cpp  offboard_veltest.cpp
catkin_ws_d430_ros/src/offboard/utils/: pid.cpp  pid.h
catkin_ws_d430_ros/src/px4_d430_bridge/: CMakeLists.txt  package.xml
catkin_ws_d430_ros/src/px4_d430_bridge/include/: PX4_d430_bridge.h
catkin_ws_d430_ros/src/px4_d430_bridge/launch/: apm_bridge_mavros.launch  bridge.launch  bridge_mavros.launch
catkin_ws_d430_ros/src/px4_d430_bridge/src/nodes/: px4_d430_bridge.cpp  px4_d430_bridge_node.cpp
docs/: RoboMaster飞行器套件2023版开源方案.md
docs/pics/: qi5.tif  固件.odg
files/: arducopter 4.3.3_pixhawk.apj  ardupilot4.0_0328_fmuv3.param  ardupilot4.0_0329_fmuv3.param  遥控器配置.otx
files/ncb_驱动包_4.6.2/: extlinux.conf  readme  tegra194-p3668-all-p3509-0000-ncb.dtb
files/ncb_驱动包_5.0.2/: extlinux-tf.conf  extlinux.conf  kernel_tegra194-p3668-0001-ncb00.dtb  kernel_tegra194-p3668-0001-ncb00.dtb.sig  readme
models/: 侧边防护板.stp  电池固定支架.stp  相机固定支架.stp  防护板固定支架_右.stp  防护板固定支架_左.stp  风扇固定板.stp  飞控固定板.stp
